# splight-agent

./: .gitignore  .snyk  Dockerfile  Makefile  README.md  docker-compose.yml  install_docker.sh  pyproject.toml  snyk_code.json  snyk_dependencies.json
.github/workflows/: developer.yaml  release.yaml
.github/workflows/scripts/: check_versions.py
docs/: flowchart.md
install_scripts/: install.sh  uninstall.sh
makefile_scripts/: build.sh  start.sh  stop.sh
splight_launcher/: handlers.py  schemas.py  settings.py
src/: main.py
src/splight_agent/: agent.py  beacon.py  constants.py  dispatcher.py  engine.py  exporter.py  handlers.py  latency.py  logging.py  models.py  orchestrator.py  rest_client.py  schemas.py  settings.py  usage.py
src/splight_launcher/: exporter.py  handlers.py  settings.py
