[tool.poetry]
name = "splight-agent"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "splight_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
docker = "^6.1.3"
boto3 = "^1.28.12"
ipython = "^8.14.0"
furl = "^2.1.3"
pyyaml = "^6.0.1"
pydantic = "1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
