[tool.poetry]
name = "splight-agent"
version = "0.8.4"
description = ""
authors = ["Splight <splight-dev@splight-ae.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
docker = "^7.1.0"
boto3 = "^1.28.12"
ipython = "^8.14.0"
furl = "^2.1.3"
pyyaml = "^6.0.1"
pydantic = "1.10.13"
concurrent-log-handler = "^0.9.24"
psutil = "^5.9.6"
wget = "3.2"

[tool.poetry.scripts]
splight-agent = "splight_agent.agent:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79
